--- a/songs/Pocity.tex
+++ b/songs/Pocity.tex
@@ -3,7 +3,7 @@
 \[G]   \[D]   \[Em]    \brk
 }\endverse
 \beginverse
-\[G]Z posledních pocitů\brk
+\[G]Z posledních pocitů \[D]\brk
 \[Em]poskládám ještě jednou \[C]úžasnou chvíli\brk
 \[G]Je to tím, že jsi tu\[D],\brk
 \[Em]možná tím, že \[C]kdysi jsme byli Ty a \[G]já,\brk
@@ -13,51 +13,51 @@ tak \[G]neříkej\brk
 \[D]Neříkej, \[Em]neříkej mi \[C]nic\brk
 \endverse
 \beginverse
-\[G]Stala ses do noci\brk
+\[G]Stala ses do noci\[D]\brk
 \[Em]z ničeho nic moje \[C]platonická láska\brk
-\[G]unaven, bezmocí,\brk
+\[G]unaven, bezmocí,\[D]\brk
 \[Em]usínám vedle tebe, \[C]něco ve mně praská\brk
-\[G]A ranní probuzení\brk
-a slova o štěstí, \[Em]neboj se to nic není\brk
+\[G]A ranní probuzení\[D]\brk
+a slova o štěstí, \[Em]neboj se to nic není \[C]\brk
 \[G]Pohled na okouzlení\[D],\brk
-a prázdný náměstí \[Em]na znamení,\brk
+a prázdný náměstí \[Em]na znamení,\[C]\brk
 \endverse
 \beginchorus
-Jenže ty \[G]neslyšíš,\brk
-jenže ty \[Em]neposloucháš,\brk
-snad ani \[G]nevidíš,\brk
-nebo spíš \[Em]nechceš vidět \brk
-a druhejm \[G]závidíš \brk
-a v očích \[Em]kapky slaný vody \brk
-zkus změnu, \[G]uvidíš \brk
-a \[Em]vítej do svobody \brk
+Jenže ty \[G]neslyšíš,\[D]\brk
+jenže ty \[Em]neposloucháš,\[C]\brk
+snad ani \[G]nevidíš,\[D]\brk
+nebo spíš \[Em]nechceš vidět\[C] \brk
+a druhejm \[G]závidíš \[D]\brk
+a v očích \[Em]kapky slaný vody\[C] \brk
+zkus změnu, \[G]uvidíš \[D]\brk
+a \[Em]vítej do svobody \[C]\brk
 \endchorus
 \beginverse
 \[G]Jsi anděl, netušíš\[D],\brk
 \[Em]Anděl co ze strachu mu \[C]utrhli křídla\brk
-\[G]A až to ucítíš\[D], zkus kašlat \[Em]na pravidla\brk
+\[G]A až to ucítíš\[D], zkus kašlat \[Em]na pravidla\[C]\brk
 \[G]Říkej si vo mně co chce\[D]š,\brk
 \[Em]já jsem byl \[C]vodjakživa blázen\brk
 \[G]Nevim co nechápeš\[D],\brk
-ale \[Em]vrať se na zem\brk
+ale \[Em]vrať se na zem\[C]\brk
 \endverse
 \beginchorus
-Jenže ty \[G]neslyšíš,\brk
-jenže ty \[Em]neposloucháš,\brk
-snad ani \[G]nevidíš,\brk
-nebo spíš \[Em]nechceš vidět \brk
-a druhejm \[G]závidíš \brk
-a v očích \[Em]kapky slaný vody \brk
-zkus změnu, \[G]uvidíš \brk
-a \[Em]vítej do svobody \brk
+Jenže ty \[G]neslyšíš,\[D]\brk
+jenže ty \[Em]neposloucháš,\[C]\brk
+snad ani \[G]nevidíš,\[D]\brk
+nebo spíš \[Em]nechceš vidět\[C] \brk
+a druhejm \[G]závidíš \[D]\brk
+a v očích \[Em]kapky slaný vody\[C] \brk
+zkus změnu, \[G]uvidíš \[D]\brk
+a \[Em]vítej do svobody \[C]\brk
 \endchorus
 \beginverse
-\[G]Z posledních pocitů\brk
+\[G]Z posledních pocitů\[D]\brk
 \[Em]poskládám ještě jednou \[C]úžasnou chvíli\brk
 \[G]Je to tím, že jsi tu\[D],\brk
 \[Em]možná tím, že \[C]kdysi jsme byli Ty a \[G]já,\brk
 my dva, dvě \[D]nahý těla,\brk
 Tak \[Em]neříkej, že \[C]jinak jsi to chtěla,\brk
 tak \[G]neříkej\brk
-\[D]Neříkej, \[Em]neříkej mi \brk
+\[D]Neříkej, \[Em]neříkej mi nic.\brk
 \endverse\endsong
