--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,12 +1,19 @@
 % Index file for Songbook.pdf
-% Automatically generated at Sun Nov  6 11:28:18 CET 2022 by link-doc
+% Automatically generated at Sun  4 Dec 14:46:50 CET 2022 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1_Signální}
 \input{songs/Africa}
-\input{songs/Boulevard_Of_Broken_Dreams}
+\input{songs/Bad_Bad_Leroy_Brown}
 \input{songs/Bára}
+\input{songs/Better_Together}
+\input{songs/Boulevard_Of_Broken_Dreams}
+\input{songs/Brandy_Youre_A_Fine_Girl}
+\input{songs/Budu_Všechno_Co_Si_Budeš_Přát}
+\input{songs/Černí_andělé}
 \input{songs/Darmodej}
+\input{songs/Demons}
+\input{songs/Dont_Go_Breaking_My_Heart}
 \input{songs/Dont_Look_Back_In_Anger}
 \input{songs/Get_Lucky}
 \input{songs/Good_Riddance_Time_Of_Your_Life}
@@ -15,6 +22,7 @@
 \input{songs/Hlupák_Váhá}
 \input{songs/Honey_Honey}
 \input{songs/Hotel_California}
+\input{songs/Im_A_Believer}
 \input{songs/Jarní_Tání}
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
 \input{songs/Kutil}
@@ -22,35 +30,52 @@
 \input{songs/Leaving_On_A_Jet_Plane}
 \input{songs/Let_Her_Go}
 \input{songs/Let_It_Be}
-\input{songs/Malování}
+\input{songs/Let_My_Love_Open_The_Door}
 \input{songs/Malá_Dáma}
+\input{songs/Malování}
+\input{songs/Mám_Jizvu_Na_Rtu}
 \input{songs/Mamma_Mia}
+\input{songs/Mandy}
 \input{songs/Matfyzák_Na_Discu}
 \input{songs/Mikymauz}
 \input{songs/Million_Reasons}
 \input{songs/Minulost}
+\input{songs/Mmm_Mmm_Mmm_Mmm}
 \input{songs/Mrs_Robinson}
-\input{songs/Mám_Jizvu_Na_Rtu}
 \input{songs/Můj_Svět}
 \input{songs/Nagasaki_Hirošima}
+\input{songs/Not_Fair}
+\input{songs/On_Top_Of_The_World}
+\input{songs/Panic}
+\input{songs/Pažitka}
 \input{songs/Perfect}
+\input{songs/Piano_Man}
 \input{songs/Pocity}
 \input{songs/Pohoda}
 \input{songs/Pompeii}
+\input{songs/Ráda_Se_Miluje}
 \input{songs/Riptide}
+\input{songs/Rocket_Man}
+\input{songs/Šaman}
 \input{songs/Svaz_Českých_Bohémů}
-\input{songs/Thinking_Out_Loud}
-\input{songs/Toulavej}
+\input{songs/Sweet_Child_O_Mine}
+\input{songs/Take_It_Easy}
 \input{songs/Těšínská}
+\input{songs/The_Weight}
+\input{songs/Thinking_Out_Loud}
+\input{songs/This_Is_The_Life}
+\input{songs/Toulavej}
 \input{songs/Ulica}
 \input{songs/Veď_mě_dál,_cesto_má}
 \input{songs/Viva_La_Vida}
 \input{songs/Vymyslená}
+\input{songs/Waiting_On_The_World_To_Change}
 \input{songs/Waterloo}
 \input{songs/When_All_Is_Said_And_Done}
+\input{songs/When_Youre_Gone}
+\input{songs/With_Or_Without_You}
 \input{songs/Wonderwall}
-\input{songs/ZZ-endsongs}
 \input{songs/Zalůbení}
+\input{songs/Zanedbaný_Sex}
 \input{songs/Zombie}
-\input{songs/Černí_andělé}
-\input{songs/Šaman}
+\input{songs/ZZ-endsongs}
