--- a/songs/Můj_Svět.tex
+++ b/songs/Můj_Svět.tex
@@ -11,10 +11,10 @@
 \endverse
 \beginchorus
 A m\[F]ě se zdá ...\brk
-A mě se \[F]zdá, že je to \[Dm]hra\brk
+A mě se \[Dm]zdá, že je to \[Am]hra\brk
 Co nemá \[Bb]konec ani za\[F]čátek\brk
-Co bude \[F]dál je ve hv\[Dm]ězdách\brk
-Robinson \[Bb]stále čeká na \[F]pátek\brk
+Co bude \[Dm]dál je ve hv\[Am]ězdách\brk
+Robinson \[Bb]stále čeká na \[Bbm]pátek\brk
 \endchorus
 \beginverse
 \[F]Stojím tu na rohu už \[Dm]několik let\brk
@@ -28,18 +28,12 @@ Robinson \[Bb]stále čeká na \[F]pátek\brk
 \endverse
 \beginchorus
 A m\[F]ě se zdá ...\brk
-A mě se \[F]zdá, že je to \[Dm]hra\brk
+A mě se \[Dm]zdá, že je to \[Am]hra\brk
 Co nemá \[Bb]konec ani za\[F]čátek\brk
-Co bude \[F]dál je ve hv\[Dm]ězdách\brk
-Robinson \[Bb]stále čeká na \[F]pátek\brk
-A mě se \[F]zdá, že je to \[Dm]hra\brk
+Co bude \[Dm]dál je ve hv\[Am]ězdách\brk
+Robinson \[Bb]stále čeká na \[Bbm]pátek\brk
+A mě se \[Dm]zdá, že je to \[Am]hra\brk
 Co nemá \[Bb]konec ani za\[F]čátek\brk
-Co bude \[F]dál je ve hv\[Dm]ězdách\brk
-Robinson \[Bb]stále čeká na \[F]pátek\brk
-A mě se \[F]zdá, že je to \[Dm]hra\brk
-Co nemá \[Bb]konec ani za\[F]čátek\brk
-Co bude \[F]dál je ve hv\[Dm]ězdách\brk
-Robinson \[Bb]stále čeká na \[F]pátek\brk
-\[F]Budu ti hrát věci \[Dm]šílený\brk
-\[Am]Budu ti hrát, dokud mě \[C]neodnesou ze\brk
+Co bude \[Dm]dál je ve hv\[Am]ězdách\brk
+Robinson \[Bb]stále čeká na \[Bbm]pátek\brk
 \endchorus\endsong
