--- a/songs/Nagasaki_Hirošima.tex
+++ b/songs/Nagasaki_Hirošima.tex
@@ -1,29 +1,29 @@
 \sclearpage\beginsong{Nagasaki Hirošima}[by={Karel Plíhal}]
 \beginchorus
-\[C]Tramvaji  \[G]dvojkou  \[F]jezdival jsem  \[G]do  \[C]Zi \[G]de \[F]ni\[G]c ,\brk
+\[C]Tramvaji  \[G]dvojkou  \[F]jezdival jsem  \[G]do  \[C]Ži\[G]de\[F]ni\[G]c ,\brk
 z \[C] tak velky \[G] lasky \[F] vetsinou \[G] nezbyde \[Am] nic,\brk
 Z \[F] takovy \[C] lasky \[F] jsou kruhy \[C] pod oci\[G] ma\brk
-a dve  \[C]spaleny  \[G]srdce -  \[F]Nagasaki,  \[G]Hirosi \[C]ma.  \[G]  \[F]  \brk
+a dve  \[C]spaleny  \[G]srdce -  \[F]Nagasaki,  \[G]Hirosi \[C]ma.  \[G]  \[F]  \[G]\brk
 \endchorus
 \beginverse
-\[C]Jsou jisty v\[G]eci, c\[F]o bych tesa\[G]l do k\[C]amene,\[G]  \[F] \brk
+\[C]Jsou jisty v\[G]eci, c\[F]o bych tesa\[G]l do k\[C]amene,\[G]  \[F] \[G]\brk
 \[C]tam, kde je l\[G]aska, t\[F]am je vsec\[G]hno dovol\[Am]ene,\brk
-a \[F]tam, kde \[C]neni,\[F] tam me to n\[C]ezajima,\brk
-jo, dve \[C]spaleny \[G]srdce - \[F]Nagasaki, \[G]Hirosi\[C]ma.  \[G] \[F] \brk
+a \[F]tam, kde \[C]neni,\[F] tam me to n\[C]ezajima, \[G]\brk
+jo, dve \[C]spaleny \[G]srdce - \[F]Nagasaki, \[G]Hirosi\[C]ma.  \[G] \[F] \[G]\brk
 \endverse
 \beginverse
-\[C]Ja nejsem s\[G]vatej, \[F]ani ty n\[G]ejsi s\[C]vata,\[G]  \[F] \brk
+\[C]Ja nejsem s\[G]vatej, \[F]ani ty n\[G]ejsi s\[C]vata,\[G]  \[F] \[G]\brk
 \[C]ale jablk\[G]a z raje b\[F]ejvala j\[G]edovat\[Am]a,\brk
 jen\[F]ze hezky\[C] jsi hr\[F]ala, kdyz mi\[C] nekdy b\[G]ylo zima,\brk
-jo, dve \[C]spaleny \[G]srdce - \[F]Nagasaki, H\[G]irosima\[C].    \[G] \[F] \brk
+jo, dve \[C]spaleny \[G]srdce - \[F]Nagasaki, H\[G]irosima\[C].    \[G] \[F] \[G]\brk
 \endverse
 \beginchorus
-\[C]Tramvaji d\[G]vojkou je\[F]zdival jsem do \[G]Zide\[C]nic\[G],  \[F] \brk
-z \[C]tak velky l\[G]asky ve\[F]tsinou nez\[G]byde nic,\brk
-Z \[F]takovy l\[C]asky js\[F]ou kruhy pod\[C] ocima  \brk
+\[C]Tramvaji d\[G]vojkou je\[F]zdival jsem do \[G]Zide\[C]nic\[G],  \[F] \[G]\brk
+z \[C]tak velky l\[G]asky ve\[F]tsinou nez\[G]byde nic,\[Am]\brk
+Z \[F]takovy l\[C]asky js\[F]ou kruhy pod\[C] ocima \[G] \brk
 \endchorus
 \beginverse*{\nolyrics [Outro]: 
-a dve \[C]spaleny s\[G]rdce - Na\[F]gasaki, Hir\[G]osima. \[C]     \[G] \[F] \brk
+a dve \[C]spaleny s\[G]rdce - Na\[F]gasaki, Hir\[G]osima. \[C]     \[G] \[F] \[G]\brk
 a dve \[C] spaleny \[G] srdce - \[F] Nagasaki, \[G] Hirosi\[C] ma.  \[G]  \[F]  \[G] \brk
 a dve \[C] spaleny \[G] srdce - \[G] Nagasaki, \[G] Hirosi\[C]  A D \[G]G \[F]B \[G]  \brk
 }\endverse\endsong
