--- a/songs/Not_Fair.tex
+++ b/songs/Not_Fair.tex
@@ -1,13 +1,17 @@
 \sclearpage\beginsong{Not Fair}[by={Lily Allen}]
 \beginverse
 O\[Dm]h he treats me with respect\brk
+He says he loves me all the time
 H\[F]e calls me 15 times a day\brk
+He likes to make sure that I'm fine
 You know I've \[Dm]never met a man who's made me feel quite so secure\brk
 He's not like \[F]all them other boys\brk
+They're all so dumb and immature
 \endverse
 \beginchorus
 There's just one t\[Dm]hing that's getting in the way\brk
 When we go up to \[F]bed you're just no good\brk
+Its such a shame
 I look into your e\[Dm]yes I want to get to know you\brk
 And then you make this n\[F]oise and its apparent it's all over\brk
 \endchorus
@@ -29,13 +33,16 @@ Yeah a\[C]ll you do is take\brk
 \endchorus
 \beginverse
 O\[Dm]h I lie here in the wet patch\brk
+In the middle of the bed
 I'm feeling pr\[F]etty damn hard done by\brk
+I spent ages giving head
 Then I rem\[Dm]ember all the nice things that you ever said to me\brk
 Maybe I'm j\[F]ust overreacting maybe you're the one for me\brk
 \endverse
 \beginchorus
 There's just one \[Dm]thing that's getting in the way\brk
 When we go up to \[F]bed you're just no good\brk
+It's such a shame
 I look into your e\[Dm]yes I want to get to know you\brk
 And then you make this n\[F]oise and it's apparent it's all over\brk
 \endchorus
@@ -59,6 +66,7 @@ Yeah a\[C]ll you do is take\brk
 \beginverse*{\nolyrics [Bridge]: 
 There's just one\[Dm] thing that's getting in the way\brk
 When we go up to \[F]bed you're just no good\brk
+It's such a shame
 I look into your \[Dm]eyes I want to get to know you\brk
 And then you make this\[F] noise and its apparent it's all over.....(aahh!!)\brk
 }\endverse
