--- a/songs/Pompeii.tex
+++ b/songs/Pompeii.tex
@@ -5,7 +5,7 @@
 \beginverse*{\nolyrics [Intro]: \[C]  \[G]  \[Em]   \[D]         \brk
 }\endverse
 \beginverse
-\[C]I was left \[G]to my own \[Em]de-v-i-c-e-s\brk
+\[C]I was left \[G]to my own \[Em]de-v-i-c-e-s\[D]\brk
 M\[C]any days f\[G]ell away with n\[Em]othing to s\[D]how\brk
 \endverse
 \beginchorus
