--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,16 +1,19 @@
 % Index file for Songbook.pdf
-% Automatically generated at Sun  4 Dec 14:46:50 CET 2022 by link-doc
+% Automatically generated at Fri Jan  6 21:59:37 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1_Signální}
+\input{songs/Accidentally_In_Love}
 \input{songs/Africa}
+\input{songs/Až_Mi_Bude_Pětašedesát}
 \input{songs/Bad_Bad_Leroy_Brown}
-\input{songs/Bára}
+\input{songs/Baroko}
 \input{songs/Better_Together}
 \input{songs/Boulevard_Of_Broken_Dreams}
 \input{songs/Brandy_Youre_A_Fine_Girl}
 \input{songs/Budu_Všechno_Co_Si_Budeš_Přát}
-\input{songs/Černí_andělé}
+\input{songs/Bára}
+\input{songs/Co_Z_Tebe_Bude}
 \input{songs/Darmodej}
 \input{songs/Demons}
 \input{songs/Dont_Go_Breaking_My_Heart}
@@ -20,6 +23,7 @@
 \input{songs/Grónská_písnička}
 \input{songs/Hallelujah}
 \input{songs/Hlupák_Váhá}
+\input{songs/Holky_To_Objektivně_Lehčí_Maj}
 \input{songs/Honey_Honey}
 \input{songs/Hotel_California}
 \input{songs/Im_A_Believer}
@@ -31,19 +35,24 @@
 \input{songs/Let_Her_Go}
 \input{songs/Let_It_Be}
 \input{songs/Let_My_Love_Open_The_Door}
-\input{songs/Malá_Dáma}
+\input{songs/Láska_Na_Vsi}
 \input{songs/Malování}
-\input{songs/Mám_Jizvu_Na_Rtu}
+\input{songs/Malá_Dáma}
 \input{songs/Mamma_Mia}
 \input{songs/Mandy}
+\input{songs/Marie}
 \input{songs/Matfyzák_Na_Discu}
 \input{songs/Mikymauz}
 \input{songs/Million_Reasons}
+\input{songs/Mimorealita}
 \input{songs/Minulost}
 \input{songs/Mmm_Mmm_Mmm_Mmm}
 \input{songs/Mrs_Robinson}
+\input{songs/Mám_Doma_Kočku}
+\input{songs/Mám_Jizvu_Na_Rtu}
 \input{songs/Můj_Svět}
 \input{songs/Nagasaki_Hirošima}
+\input{songs/Netušim}
 \input{songs/Not_Fair}
 \input{songs/On_Top_Of_The_World}
 \input{songs/Panic}
@@ -53,21 +62,26 @@
 \input{songs/Pocity}
 \input{songs/Pohoda}
 \input{songs/Pompeii}
-\input{songs/Ráda_Se_Miluje}
 \input{songs/Riptide}
 \input{songs/Rocket_Man}
-\input{songs/Šaman}
+\input{songs/Ráda_Se_Miluje}
+\input{songs/Srdce_Jako_Knize_Rohan}
 \input{songs/Svaz_Českých_Bohémů}
 \input{songs/Sweet_Child_O_Mine}
+\input{songs/Sáro}
 \input{songs/Take_It_Easy}
-\input{songs/Těšínská}
 \input{songs/The_Weight}
 \input{songs/Thinking_Out_Loud}
 \input{songs/This_Is_The_Life}
 \input{songs/Toulavej}
+\input{songs/Těšínská}
+\input{songs/Tři_Kříže}
 \input{songs/Ulica}
+\input{songs/V_7_25}
+\input{songs/V_Lese}
 \input{songs/Veď_mě_dál,_cesto_má}
 \input{songs/Viva_La_Vida}
+\input{songs/Vymlácený_Entry}
 \input{songs/Vymyslená}
 \input{songs/Waiting_On_The_World_To_Change}
 \input{songs/Waterloo}
@@ -75,7 +89,9 @@
 \input{songs/When_Youre_Gone}
 \input{songs/With_Or_Without_You}
 \input{songs/Wonderwall}
+\input{songs/ZZ-endsongs}
 \input{songs/Zalůbení}
 \input{songs/Zanedbaný_Sex}
 \input{songs/Zombie}
-\input{songs/ZZ-endsongs}
+\input{songs/Černí_andělé}
+\input{songs/Šaman}
