Compiled on ubuntu.

--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Fri Jan  6 21:59:37 CST 2023 by link-doc
+% Automatically generated at Fri  6 Jan 23:12:07 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1_Signální}
@@ -7,12 +7,13 @@
 \input{songs/Africa}
 \input{songs/Až_Mi_Bude_Pětašedesát}
 \input{songs/Bad_Bad_Leroy_Brown}
+\input{songs/Bára}
 \input{songs/Baroko}
 \input{songs/Better_Together}
 \input{songs/Boulevard_Of_Broken_Dreams}
 \input{songs/Brandy_Youre_A_Fine_Girl}
 \input{songs/Budu_Všechno_Co_Si_Budeš_Přát}
-\input{songs/Bára}
+\input{songs/Černí_andělé}
 \input{songs/Co_Z_Tebe_Bude}
 \input{songs/Darmodej}
 \input{songs/Demons}
@@ -31,13 +32,15 @@
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
 \input{songs/Kutil}
 \input{songs/Lachtani}
+\input{songs/Láska_Na_Vsi}
 \input{songs/Leaving_On_A_Jet_Plane}
 \input{songs/Let_Her_Go}
 \input{songs/Let_It_Be}
 \input{songs/Let_My_Love_Open_The_Door}
-\input{songs/Láska_Na_Vsi}
-\input{songs/Malování}
 \input{songs/Malá_Dáma}
+\input{songs/Malování}
+\input{songs/Mám_Doma_Kočku}
+\input{songs/Mám_Jizvu_Na_Rtu}
 \input{songs/Mamma_Mia}
 \input{songs/Mandy}
 \input{songs/Marie}
@@ -48,8 +51,6 @@
 \input{songs/Minulost}
 \input{songs/Mmm_Mmm_Mmm_Mmm}
 \input{songs/Mrs_Robinson}
-\input{songs/Mám_Doma_Kočku}
-\input{songs/Mám_Jizvu_Na_Rtu}
 \input{songs/Můj_Svět}
 \input{songs/Nagasaki_Hirošima}
 \input{songs/Netušim}
@@ -62,25 +63,26 @@
 \input{songs/Pocity}
 \input{songs/Pohoda}
 \input{songs/Pompeii}
+\input{songs/Ráda_Se_Miluje}
 \input{songs/Riptide}
 \input{songs/Rocket_Man}
-\input{songs/Ráda_Se_Miluje}
+\input{songs/Šaman}
+\input{songs/Sáro}
 \input{songs/Srdce_Jako_Knize_Rohan}
 \input{songs/Svaz_Českých_Bohémů}
 \input{songs/Sweet_Child_O_Mine}
-\input{songs/Sáro}
 \input{songs/Take_It_Easy}
+\input{songs/Těšínská}
 \input{songs/The_Weight}
 \input{songs/Thinking_Out_Loud}
 \input{songs/This_Is_The_Life}
 \input{songs/Toulavej}
-\input{songs/Těšínská}
 \input{songs/Tři_Kříže}
 \input{songs/Ulica}
 \input{songs/V_7_25}
-\input{songs/V_Lese}
 \input{songs/Veď_mě_dál,_cesto_má}
 \input{songs/Viva_La_Vida}
+\input{songs/V_Lese}
 \input{songs/Vymlácený_Entry}
 \input{songs/Vymyslená}
 \input{songs/Waiting_On_The_World_To_Change}
@@ -89,9 +91,7 @@
 \input{songs/When_Youre_Gone}
 \input{songs/With_Or_Without_You}
 \input{songs/Wonderwall}
-\input{songs/ZZ-endsongs}
 \input{songs/Zalůbení}
 \input{songs/Zanedbaný_Sex}
 \input{songs/Zombie}
-\input{songs/Černí_andělé}
-\input{songs/Šaman}
+\input{songs/ZZ-endsongs}
