--- a/songs/Baroko.tex
+++ b/songs/Baroko.tex
@@ -1,39 +1,56 @@
-\sclearpage\beginsong{Baroko}[by={Richard M\u00fcller}]
-\beginverse       \[Dmi]    \[C]  \[Dmi]    \[C]         \brk
-1. \[Dmi]Schoulené holky spí \[C]nahé \brk
+\sclearpage\beginsong{Baroko}[by={Richard Muller}]
+\beginverse*{\nolyrics Intro: 
+\[Dmi]    \[C]  \[Dmi]    \[C]         \brk
+}\endverse
+\beginverse
+\[Dmi]Schoulené holky spí \[C]nahé \brk
 u h\[Dmi]robu Tycha de Bra\[C]he \brk
 z k\[Bb]amene oživlá světi\[C]ce \brk
 poz\[Dmi]vedá monstranci měsí\[C]ce \brk
-R: T\[F]aková z\[C]ář je jen \[Dmi]jedna \brk
+\endverse
+\beginchorus
+T\[F]aková z\[C]ář je jen \[Dmi]jedna \brk
 odtu\[F]d až do \[C]nedohled\[Dmi]na    \[Bb]         \brk
 no a\[F] z něj dale\[C]ko šir\[Dmi]oko     \[Bb]         \brk
 prou\[F]dem se rozl\[C]évá baro\[Dmi]ko     \[Bb]         \brk
-2. \[Dmi]Andělé odhalte tv\[C]áře \brk
+\endchorus
+\beginverse
+\[Dmi]Andělé odhalte tv\[C]áře \brk
 pro\[Dmi] slepé harmonikář\[C]e \brk
 Kte\[Bb]ré jsem čekal a ne\[C]propás \brk
 Dův\[Dmi]erně známý je kaž\[C]dý z vás \brk
-R: J\[F]ste-li \[C]tak důvěrný \[Dmi]známý \brk
+\endverse
+\beginchorus
+J\[F]ste-li \[C]tak důvěrný \[Dmi]známý \brk
 Pojď\[F]te a zp\[C]ívejte s nám\[Dmi]i     \[Bb]         \brk
 My d\[F]ole vy \[C]zase vysoko\[Dmi]      \[Bb]         \brk
 O to\[F]m jak m\[C]ocné je baro\[Dmi]ko     \[Bb]         \brk
-3. \[Dmi]Sedlejme koně a v\[C]zhůru \brk
+\endchorus
+\beginverse
+\[Dmi]Sedlejme koně a v\[C]zhůru \brk
 Zap\[Dmi]lašme zlou denní můr\[C]u \brk
 Kte\[Bb]rá nám sežrala sto\[C]letí \brk
 Zpě\[Dmi]nění hřebci se roz\[C]letí \brk
-R: V\[F] tuto n\[C]oc lámání \[Dmi]kostí \brk
+\endverse
+\beginchorus
+V\[F] tuto n\[C]oc lámání \[Dmi]kostí \brk
 Chyt\[F]rácké m\[C]alověrnost\[Dmi]i     \[Bb]         \brk
 Sraž\[F]me tu b\[C]estii hlubo\[Dmi]ko    \[Bb]         \brk
 Tak \[F]jak to \[C]umí jen bar\[Dmi]oko   \[Bb]         \brk
-Dne\[Bb]s je dnes ndash; ale co\[C] zítra \brk
+Dne\[Bb]s je dnes, ale co\[C] zítra \brk
 Zby\[Bb]de tu zázračná mitr\[C]a? \brk
 Kom\[Bb]u dá svou hlavu do \[C]klína \brk
 ryz\[Bb]áček svatého Mart\[C]ina \brk
-R: Z\[F]em kter\[C]á nemá své \[Dmi]nebe   \[Bb]         \brk
+\endchorus
+\beginchorus
+Z\[F]em kter\[C]á nemá své \[Dmi]nebe   \[Bb]         \brk
 Ztra\[F]tila vš\[C]echno i seb\[Dmi]e      \[Bb]         \brk
 Zaro\[F]stla pa\[C]stvou jen pr\[Dmi]o oko   \[Bb]         \brk
-Proč\[F] si tak vzdá\[C]lené - v perutí\[Dmi]ch oděné ndash\[Bb]; baroko ? \brk
-R: Z\[F]em kter\[C]á nemá své \[Dmi]nebe  \[Bb]         \brk
+Proč\[F] si tak vzdá\[C]lené - v perutí\[Dmi]ch oděné \[Bb] baroko ? \brk
+\endchorus
+\beginchorus
+Z\[F]em kter\[C]á nemá své \[Dmi]nebe  \[Bb]         \brk
 Ztra\[F]tila vš\[C]echno i seb\[Dmi]e     \[Bb]         \brk
 Zarů\[F]stá pas\[C]tvou jen pro ok\[Dmi]o     \[Bb]         \brk
-   P\[F]roč si \[C]tak vzdálené ba\[Dmi]roko  \[Bb]A D G B   +2 sedí  Jako Knize     Je Krásná   To Také Ľahké     Muuml;ller - Baroko  Muuml;ller - Baroko  Muuml;ller - Baroko\brk
-\endverse\endsong
+   P\[F]roč si \[C]tak vzdálené ba\[Dmi]roko  \[Bb] \brk
+\endchorus\endsong
