--- a/songs/Accidentally_In_Love.tex
+++ b/songs/Accidentally_In_Love.tex
@@ -1,6 +1,5 @@
 \sclearpage\beginsong{Accidentally In Love}[by={Counting Crows}]
-\beginverse*{\nolyrics Intro: 
-\[G]   \[C]   \[Em]   \[A]   \[C]         \brk
+\beginverse*{\nolyrics Intro: \[G]\[C]\[Em]\[A]\[C]      
 }\endverse
 \beginverse
 \[G]So she said what's the pr\[C]oblem baby\brk
@@ -8,6 +7,8 @@
 Well maybe I'm in\[Em] love (love)\brk
 Think about it \[A]everytime I think about it\brk
 \[C]Can't stop thinking 'bout it\brk
+\endverse
+\beginverse
 \[G]How much longer will it ta\[C]ke to cure this?\brk
 \[G]Just to cure it 'cause I ca\[C]n't ignore it if it's lo\[Em]ve (love)\brk
 Makes me wanna \[A]turn around and face me but I \[D]don't know\brk
@@ -26,6 +27,8 @@ The \[C]world will follow \[D]after\brk
 \[G]Running down into the spr\[C]ing that's coming all this lo\[Em]ve\brk
 Melting under \[A]blue skies belting out \[C]sunlight\brk
 shimmering \[G]love\brk
+\endverse
+\beginverse
 Well baby \[C]I surrender to the \[G]strawberry ice cream\brk
 \[C]never ever end of all this\[Em] love\brk
 Well I \[A]didn't mean to do it\brk
