--- a/songs/Boulevard_Of_Broken_Dreams.tex
+++ b/songs/Boulevard_Of_Broken_Dreams.tex
@@ -56,5 +56,4 @@ Where the c\[G]ity sleeps, and \[D]I'm the only on\[A]e and I walk a...\brk
 \[C]Sometimes\[G] I wish \[D]someone out there \[Em]will find me\brk
 \[C]Till then \[G]I walk \[B7]alone\brk
 \endchorus
-\beginverse*{\nolyrics [Outro]: 
-}\endverse\endsong
+\endsong
