--- a/songs/index.tex
+++ b/songs/index.tex
@@ -1,5 +1,5 @@
 % Index file for Songbook.pdf
-% Automatically generated at Fri Jan 13 10:37:26 CST 2023 by link-doc
+% Automatically generated at Sun Jan 15 23:41:09 CST 2023 by link-doc
 % Do not attempt to alter this file as it will be regenerated upon next compilation by link-doc
 \input{songs/00-title}
 \input{songs/1_Signální}
@@ -8,13 +8,14 @@
 \input{songs/Až_Mi_Bude_Pětašedesát}
 \input{songs/Bad_Bad_Leroy_Brown}
 \input{songs/Baroko}
-\input{songs/Better_Together}
+\input{songs/Blíženci}
 \input{songs/Boulevard_Of_Broken_Dreams}
 \input{songs/Brandy_Youre_A_Fine_Girl}
 \input{songs/Budu_Všechno_Co_Si_Budeš_Přát}
 \input{songs/Bára}
 \input{songs/Co_Z_Tebe_Bude}
 \input{songs/Darmodej}
+\input{songs/Dej_Mi_Víc_Své_Lásky}
 \input{songs/Demons}
 \input{songs/Dont_Go_Breaking_My_Heart}
 \input{songs/Dont_Look_Back_In_Anger}
@@ -29,6 +30,7 @@
 \input{songs/Hotel_California}
 \input{songs/Im_A_Believer}
 \input{songs/Jarní_Tání}
+\input{songs/Jasná_Zpráva}
 \input{songs/Kdo_Vchází_Do_Tvých_Snů_Má_Lásko}
 \input{songs/Kutil}
 \input{songs/Lachtani}
@@ -55,7 +57,9 @@
 \input{songs/Nagasaki_Hirošima}
 \input{songs/Netušim}
 \input{songs/Not_Fair}
+\input{songs/Okno_Mé_Lásky}
 \input{songs/On_Top_Of_The_World}
+\input{songs/Osmý_Den}
 \input{songs/Panic}
 \input{songs/Pažitka}
 \input{songs/Perfect}
@@ -64,8 +68,8 @@
 \input{songs/Pohoda}
 \input{songs/Pompeii}
 \input{songs/Riptide}
-\input{songs/Rocket_Man}
 \input{songs/Ráda_Se_Miluje}
+\input{songs/Slzy_Tvý_Mámy}
 \input{songs/Srdce_Jako_Knize_Rohan}
 \input{songs/Svaz_Českých_Bohémů}
 \input{songs/Sweet_Child_O_Mine}
@@ -94,5 +98,6 @@
 \input{songs/Zalůbení}
 \input{songs/Zanedbaný_Sex}
 \input{songs/Zombie}
+\input{songs/old/Better_Together}
 \input{songs/Černí_andělé}
 \input{songs/Šaman}
